--- a/translation/po/all.ja.po
+++ b/translation/po/all.ja.po
@@ -7110,3 +7110,348 @@ msgstr ""
 "    date_of_birth { 21.years.ago }\n"
 "  end\n"
 "end\n"
+
+#. type: Title #
+#: ../CONTRIBUTING.md:1
+#, no-wrap
+msgid "Contributing to Factory Bot"
+msgstr "Factory Botへの貢献"
+
+#. type: Plain text
+#: ../CONTRIBUTING.md:5
+msgid ""
+"We love pull requests from everyone. By participating in this project, you "
+"agree to abide by the thoughtbot [code of conduct]."
+msgstr ""
+"どなたでもプルリクエストを歓迎します。\n"
+"このプロジェクトに参加することで、thoughtbotの[行動規範][code of conduct]に従"
+"うことに同意したものとします。"
+
+#. type: Link reference
+#: ../CONTRIBUTING.md:6
+#, no-wrap
+msgid "[code of conduct]: https://thoughtbot.com/open-source-code-of-conduct"
+msgstr "[code of conduct]: https://thoughtbot.com/open-source-code-of-conduct"
+
+#. type: Plain text
+#: ../CONTRIBUTING.md:9
+msgid "Here are some ways *you* can contribute:"
+msgstr "以下は*あなた*が貢献できる方法です。"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:19
+msgid "by using alpha, beta, and prerelease versions"
+msgstr "アルファ、ベータ、プレリリースのバージョンを使う"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:19
+msgid "by reporting bugs"
+msgstr "不具合を報告する"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:19
+msgid "by suggesting new features"
+msgstr "新機能を提案する"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:19
+msgid "by writing or editing documentation"
+msgstr "ドキュメントを書いたり編集したりする"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:19
+msgid "by writing specifications"
+msgstr "仕様を書く"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:19
+msgid ""
+"by writing code ( **no patch is too small** : fix typos, add comments, etc. )"
+msgstr ""
+"コードを書く（**どんなパッチも些細ではありません**。誤植修正やコメントの追加"
+"などもそうです）"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:19
+msgid "by refactoring code"
+msgstr "コードを改修する"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:19
+msgid "by closing [issues][]"
+msgstr "[イシュー][issues]を閉じる"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:19
+msgid "by reviewing patches"
+msgstr "パッチをレビューする"
+
+#. type: Link reference
+#: ../CONTRIBUTING.md:20
+#, no-wrap
+msgid "[issues]: https://github.com/thoughtbot/factory_bot/issues"
+msgstr "[issues]: https://github.com/thoughtbot/factory_bot/issues"
+
+#. type: Title ##
+#: ../CONTRIBUTING.md:22
+#, no-wrap
+msgid "Submitting an Issue"
+msgstr "イシューを送る"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:30
+msgid "We use the [GitHub issue tracker][issues] to track bugs and features."
+msgstr ""
+"[GitHubのイシュートラッカー][issues]を使って不具合と機能と把握しています。"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:30
+msgid ""
+"Before submitting a bug report or feature request, check to make sure it "
+"hasn't already been submitted."
+msgstr ""
+"不具合報告や機能の要望を送る前に、既に送られていないか必ずお確かめください。"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:30
+msgid ""
+"When submitting a bug report, please include a [reproduction script] and any "
+"other details that may be necessary to reproduce the bug, including your gem "
+"version, Ruby version, and operating system."
+msgstr ""
+"不具合報告を送るとき、[再現スクリプト][reproduction script]とその不具合を再現"
+"するのに必要かもしれないその他の詳細を含めてください。\n"
+"これにはgemのバージョン、Rubyのバージョン、オペレーティングシステムが含まれま"
+"す。"
+
+#. type: Title ##
+#: ../CONTRIBUTING.md:31
+#, no-wrap
+msgid "Cleaning up issues"
+msgstr "イシューを整頓する"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:38
+msgid ""
+"Issues that have no response from the submitter will be closed after 30 days."
+msgstr "送信者から反応がないイシューは30日以降に閉じられます。"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:38
+msgid ""
+"Issues will be closed once they're assumed to be fixed or answered. If the "
+"maintainer is wrong, it can be opened again."
+msgstr ""
+"イシューは修正されたり回答されたと思われたときに閉じられます。\n"
+"メンテナが間違っていたときは再び開くことがあります。"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:38
+msgid ""
+"If your issue is closed by mistake, please understand and explain the "
+"issue.  We will happily reopen the issue."
+msgstr ""
+"イシューが間違って閉じられたときはイシューを理解して説明してください。\n"
+"喜んでイシューを再度開きます。"
+
+#. type: Title ##
+#: ../CONTRIBUTING.md:39
+#, no-wrap
+msgid "Submitting a Pull Request"
+msgstr "プルリクエストを送る"
+
+#. type: Bullet: '1. '
+#: ../CONTRIBUTING.md:46
+msgid "[Fork][fork] the [official repository][repo]."
+msgstr "[公式リポジトリ][repo]を[フォーク][fork]します。"
+
+#. type: Bullet: '1. '
+#: ../CONTRIBUTING.md:46
+msgid "[Create a topic branch.][branch]"
+msgstr "[トピックブランチを作ります][branch]。"
+
+#. type: Bullet: '1. '
+#: ../CONTRIBUTING.md:46
+msgid "Implement your feature or bug fix."
+msgstr "機能や不具合修正を実装します。"
+
+#. type: Bullet: '1. '
+#: ../CONTRIBUTING.md:46
+msgid "Add, commit, and push your changes."
+msgstr "変更を加え、コミットし、プッシュします。"
+
+#. type: Bullet: '1. '
+#: ../CONTRIBUTING.md:46
+msgid "[Submit a pull request.][pr]"
+msgstr "[プルリクエストを送る][pr]。"
+
+#. type: Title ###
+#: ../CONTRIBUTING.md:47
+#, no-wrap
+msgid "Notes"
+msgstr "補足"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:53
+msgid ""
+"Please add tests if you changed code. Contributions without tests won't be "
+"accepted."
+msgstr ""
+"コードを変えたときはテストを加えてください。\n"
+"テストのない貢献は受け付けられません。"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:53
+msgid ""
+"If you don't know how to add tests, please put in a PR and leave a comment "
+"asking for help. We love helping!"
+msgstr ""
+"テストの加え方が分からなければ、PRを作って手助けを求めるコメントを残してくだ"
+"さい。\n"
+"喜んでお手伝いします！"
+
+#. type: Bullet: '* '
+#: ../CONTRIBUTING.md:53
+msgid "Please don't update the Gem version."
+msgstr "gemのバージョンを更新しないでください。"
+
+#. type: Title ##
+#: ../CONTRIBUTING.md:54
+#, no-wrap
+msgid "Setting up"
+msgstr "準備"
+
+#. type: Fenced code block (sh)
+#: ../CONTRIBUTING.md:56
+#, no-wrap
+msgid "bundle install\n"
+msgstr "bundle install\n"
+
+#. type: Title ##
+#: ../CONTRIBUTING.md:60
+#, no-wrap
+msgid "Running the test suite"
+msgstr "テストスートを走らせる"
+
+#. type: Plain text
+#: ../CONTRIBUTING.md:63
+msgid "The default rake task will run the full test suite and [standard]:"
+msgstr "規定のrakeタスクは完全なテストスートと[standard]を走らせます。"
+
+#. type: Fenced code block (sh)
+#: ../CONTRIBUTING.md:64
+#, no-wrap
+msgid "bundle exec rake\n"
+msgstr "bundle exec rake\n"
+
+#. type: Plain text
+#: ../CONTRIBUTING.md:69
+msgid "You can also run a single group of tests (unit, spec, or feature)"
+msgstr "1グループのテスト（単体、スペック、機能）を走らせることもできます。"
+
+#. type: Fenced code block (sh)
+#: ../CONTRIBUTING.md:70
+#, no-wrap
+msgid ""
+"bundle exec rake spec:unit\n"
+"bundle exec rake spec:acceptance\n"
+"bundle exec rake features\n"
+msgstr ""
+"bundle exec rake spec:unit\n"
+"bundle exec rake spec:acceptance\n"
+"bundle exec rake features\n"
+
+#. type: Plain text
+#: ../CONTRIBUTING.md:77
+msgid ""
+"To run an individual rspec test, you can provide a path and line number:"
+msgstr "個別のrspecのテストを走らせるため、パスと行番号を与えられます。"
+
+#. type: Fenced code block (sh)
+#: ../CONTRIBUTING.md:78
+#, no-wrap
+msgid "bundle exec rspec spec/path/to/spec.rb:123\n"
+msgstr "bundle exec rspec spec/path/to/spec.rb:123\n"
+
+#. type: Plain text
+#: ../CONTRIBUTING.md:84
+msgid ""
+"You can run tests with a specific version of rails via [appraisal]. To run "
+"the default rake task against Rails 6, for example:"
+msgstr ""
+"[appraisal]で特定のバージョンのrailsでテストを走らせられます。\n"
+"Rails 6に対して規定のrakeタスクを走らせる例は以下です。"
+
+#. type: Fenced code block (sh)
+#: ../CONTRIBUTING.md:85
+#, no-wrap
+msgid "bundle exec appraisal 6.0 rake\n"
+msgstr "bundle exec appraisal 6.0 rake\n"
+
+#. type: Title ##
+#: ../CONTRIBUTING.md:89
+#, no-wrap
+msgid "Formatting"
+msgstr "整形"
+
+#. type: Plain text
+#: ../CONTRIBUTING.md:92
+msgid "Use [standard] to automatically format your code:"
+msgstr "自動でコードを整形するには[standard]を使ってください。"
+
+#. type: Fenced code block (sh)
+#: ../CONTRIBUTING.md:93
+#, no-wrap
+msgid "bundle exec rake standard:fix\n"
+msgstr "bundle exec rake standard:fix\n"
+
+#. type: Link reference
+#: ../CONTRIBUTING.md:97
+#, no-wrap
+msgid "[repo]: https://github.com/thoughtbot/factory_bot/tree/main"
+msgstr "[repo]: https://github.com/thoughtbot/factory_bot/tree/main"
+
+#. type: Link reference
+#: ../CONTRIBUTING.md:98
+#, no-wrap
+msgid "[fork]: https://help.github.com/articles/fork-a-repo/"
+msgstr "[fork]: https://help.github.com/articles/fork-a-repo/"
+
+#. type: Link reference
+#: ../CONTRIBUTING.md:99
+#, no-wrap
+msgid "[branch]: https://help.github.com/articles/creating-and-deleting-branches-within-your-repository/"
+msgstr "[branch]: https://help.github.com/articles/creating-and-deleting-branches-within-your-repository/"
+
+#. type: Link reference
+#: ../CONTRIBUTING.md:100
+#, no-wrap
+msgid "[pr]: https://help.github.com/articles/using-pull-requests/"
+msgstr "[pr]: https://help.github.com/articles/using-pull-requests/"
+
+#. type: Link reference
+#: ../CONTRIBUTING.md:101
+#, no-wrap
+msgid "[standard]: https://github.com/testdouble/standard"
+msgstr "[standard]: https://github.com/testdouble/standard"
+
+#. type: Link reference
+#: ../CONTRIBUTING.md:102
+#, no-wrap
+msgid "[appraisal]: https://github.com/thoughtbot/appraisal"
+msgstr "[appraisal]: https://github.com/thoughtbot/appraisal"
+
+#. type: Link reference
+#: ../CONTRIBUTING.md:103
+#, no-wrap
+msgid "[reproduction script]: https://github.com/thoughtbot/factory_bot/blob/main/.github/REPRODUCTION_SCRIPT.rb"
+msgstr "[reproduction script]: https://github.com/thoughtbot/factory_bot/blob/main/.github/REPRODUCTION_SCRIPT.rb"
+
+#. type: Plain text
+#: ../CONTRIBUTING.md:105
+msgid ""
+"Inspired by https://github.com/middleman/middleman-heroku/blob/master/"
+"CONTRIBUTING.md"
+msgstr ""
+"https://github.com/middleman/middleman-heroku/blob/master/CONTRIBUTING.md か"
+"ら着想を得ました。"
