Translate version 6.4.2 change log entry.

--- a/translation/po/all.ja.po
+++ b/translation/po/all.ja.po
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: factory_bot\n"
-"POT-Creation-Date: 2024-06-22 13:36+0900\n"
-"PO-Revision-Date: 2024-06-22 13:38+0900\n"
+"POT-Creation-Date: 2024-08-25 07:41+0900\n"
+"PO-Revision-Date: 2024-08-25 07:42+0900\n"
 "Last-Translator: gemmaro <gemmaro.dev@gmail.com>\n"
 "Language-Team: none\n"
 "Language: ja\n"
@@ -6549,6 +6549,11 @@ msgid ""
 "factory :user do\n"
 "  name { \"Friendly User\" }\n"
 "\n"
+"  trait :active do\n"
+"    name { \"John Doe\" }\n"
+"    status { :active }\n"
+"  end\n"
+"\n"
 "  trait :admin do\n"
 "    admin { true }\n"
 "  end\n"
@@ -6560,12 +6565,17 @@ msgstr ""
 "factory :user do\n"
 "  name { \"Friendly User\" }\n"
 "\n"
+"  trait :active do\n"
+"    name { \"John Doe\" }\n"
+"    status { :active }\n"
+"  end\n"
+"\n"
 "  trait :admin do\n"
 "    admin { true }\n"
 "  end\n"
 "end\n"
 "\n"
-"# :active状態を持つ名前が「Jon Snow」の管理者の利用者を3人作ります。\n"
+"# 3人の管理利用者を作ります。:active状態があり、名前は「Jon Snow」です\n"
 "create_list(:user, 3, :admin, :active, name: \"Jon Snow\")\n"
 
 #. type: Title #
